# gerb

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  _config.yml  build.rs  generate_commit_screenshot.py  index.md  typos.toml
.github/: FUNDING.yml  spellcheck.sh
.github/ISSUE_TEMPLATE/: bug_report.md  missing-feature.md
.github/workflows/: builds.yaml  spellcheck.yaml  test.yaml
_layouts/: default.html
_posts/: 2022-02-05-part1.md  2022-02-06-part2.md  2022-02-07-part3.md  2022-02-08-part4.md  2022-02-09-part5.md  2022-02-10-part6.md  2022-02-11-part7.md  2022-02-12-part8.md
assets/css/: style.scss
examples/: .py_completion  README.md  repl.rs
src/: api.rs  app.rs  custom.css  editor.rs  error.rs  git.rs  glyph_edit.rs  glyphs.rs  lib.rs  main.rs  project.rs  repl.rs  resources.rs  ufo.rs  utils.rs  views.rs  window.rs
src/api/: json_objects.rs  registry.rs  shell.rs  types.rs
src/app/: settings.rs  themes.rs  undo.rs
src/app/settings/: types.rs
src/editor/: layers.rs  menu.rs  settings.rs  shortcuts.rs  state.rs  tools.rs
src/editor/tools/: bezier.rs  bspline.rs  image.rs  panning.rs  shapes.rs  tool_impl.rs  zoom.rs
src/git/: tab.rs
src/glyph_edit/: layers.rs  menu.rs  shortcuts.rs  state.rs  tools.rs
src/glyph_edit/tools/: bezier.rs  bspline.rs  freehand.rs  image.rs  panning.rs  shapes.rs  tool_impl.rs  zoom.rs
src/glyphs/: contours.rs  glif.rs  guidelines.rs  metadata.rs  obj.rs
src/resources/: svg_to_png.sh
src/themes/: custom-widgets.css
src/themes/paperwhite/: _colors.scss  _common.scss  _drawing.scss  gtk.css  gtk.scss
src/ufo/: constants.rs  export.py  export.rs  glif.rs  glyphs_to_ufo3.py  import.rs  objects.rs  ufo2to3.py
src/unicode/: mod.rs
src/unicode/names/: README.md  jamo.rs  mod.rs  reserved.rs  tables.rs  unicode.py
src/utils/: colors.rs  curves.rs  menu.rs  points.rs  property_window.rs  range_query.rs  shortcuts.rs  widgets.rs
src/utils/property_window/: types.rs
src/views/: canvas.rs  collection.rs  glyph_edit.rs  glyphs_overview.rs  overlay.rs
src/views/canvas/: layers.rs  settings.rs  transformation.rs
src/views/glyph_edit/: bezier_pen.rs  guidelines.rs  layers.rs  tools.rs  viewhide.rs  visibility_toggles.rs
src/views/glyph_edit/tools/: bezier.rs  bspline.rs  panning.rs  shapes.rs  tool_impl.rs  zoom.rs
src/views/overlay/: child.rs
src/window/: breadcrumbs.rs  minimap.rs  tabinfo.rs  workspace.rs
tests/: api.rs  unicode.rs  utils.rs
