[package]
name = "gerb"
version = "0.0.0"
edition = "2021"
authors = ["Manos Pitsidianakis <epilys@nessuent.xyz>"]
description = "font editor"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/epilys/gerb"
repository = "https://github.com/epilys/gerb"

[dependencies]
gtk = { version = "^0.15", features = [ "v3_20", ] }
glib = { version = "^0.15" }
chrono = "0.4"
futures = "0.3"
futures-util = "0.3"
once_cell = "1.2.0"
generational-arena = "0.2"

serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1" }
quick-xml = { version = "0.21", features = [ "serialize" ] }
toml_edit = { version = "0.17.1", features = ["serde", "easy", "perf"] }
xdg = { version = "2.1" }

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.cairo-rs]
version = "^0.15"
optional = true
features = ["svg", ]

[features]
default = ["svg", ]
svg = ["cairo-rs/svg", ]

[profile.release]
lto = true
