[package]
name = "gerb"
version = "0.0.0"
edition = "2021"
authors = ["Manos Pitsidianakis <epilys@nessuent.xyz>"]
description = "font editor"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/epilys/gerb"
repository = "https://github.com/epilys/gerb"

[dependencies]
chrono = "0.4"
futures = "0.3"
futures-util = "0.3"
generational-arena = "0.2"
glib = { version = "^0.15" }
gtk = { version = "^0.15", features = [ "v3_20", ] }
indexmap = { version = "1.9" }
once_cell = "1.2.0"
plist = { version = "1" }
quick-xml = { version = "0.21", features = [ "serialize" ] }
rand = { version = "0.8" }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1" }
toml_edit = { version = "0.17.1", features = ["serde", "easy", "perf"] }
xdg = { version = "2.1" }

[dependencies.cairo-rs]
version = "^0.15"
optional = true
features = ["svg", ]

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
default = ["svg", ]
svg = ["cairo-rs/svg", ]

[profile.release]
lto = true
