[package]
name = "gerb"
version = "0.0.1-alpha+2023-03-22"
edition = "2021"
resolver = "2"
authors = ["Manos Pitsidianakis <manos@pitsidianak.is>"]
description = "Font editor for UFO 3 fonts."
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/epilys/gerb"
repository = "https://github.com/epilys/gerb"
keywords = ["font", "fonts", "editor", "ufo", "typography"]
categories = ["graphics"]
default-run = "gerb"
exclude = ["Makefile", "src/unicode/names/unicode.py", "/tests", "/docs", ".*", "CODE_OF_CONDUCT.md", "CONTRIBUTING.md", "DEVELOPMENT.md", "/*.py", "/*.png", "*.scss", "src/themes/**/README"]

[[bin]]
name = "gerb"
path = "src/main.rs"

[[example]]
name = "repl"
path = "src/repl.rs"
required-features = ["python"]

[dependencies]
build-info = { version = "0.0.29", default-features = false, optional = true }
chrono = { version = "0.4", default-features = false }
futures = "0.3"
futures-util = "0.3"
generational-arena = "0.2"
gio = { version = "^0.15", features = [ "v2_56", ] }
glib = { version = "^0.15" }
gtk = { version = "^0.15", features = [ "v3_20", "v3_24" ] }
indexmap = { version = "1.9", features = [ "serde", ] }
once_cell = "1.2.0"
plist = { version = "1" }
quick-xml = { version = "^0.27", features = [ "serialize" ] }
rand = { version = "0.8" }
regex = { version = "1" }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1" }
smallvec = { version = "1.10", features = ["const_new", "const_generics", "union", "serde"] }
toml_edit = { version = "^0.19", features = ["serde", "perf"] }
xdg = { version = "2.1" }

[dependencies.cairo-rs]
version = "^0.15"
features = ["svg", "png"]

[dependencies.git2]
version = "0.16"
optional = true
default-features = false

[dependencies.pyo3]
version = "0.18"
optional = true
features = ["auto-initialize", "indexmap"]

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]

[build-dependencies]
build-info-build = { version = "0.0.29", optional = true }

[features]
default = ["python", "git"]
build-info = ["dep:build-info", "dep:build-info-build"]
python = ["pyo3"]
git = ["git2"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"
debug = false
strip = true
